2009-10-06  Ethan A Merritt  <merritt@u.washington.edu>

	* term/gd.trm: Silence a compiler warning if gdUseFontConfig() is
	defined to be 0.

2009-10-06  Tatsuro Matsuoka <tmacchant3@yahoo.co.jp>

	* config/makeile.mgw:  Override the -mwindows compilation flag 
	provided by wx-config.

2009-09-17  Ethan A Merritt  <merritt@u.washington.edu>

	* term/canvas.trm (CANVAS_graphics): Be wary of uninitialized
	global variables when setting up the mouse event handler.

2009-09-16  Benjamin Lindner  <lindnerb@users.sourceforge.net> 

	* term/emf.trm (ENHemf_FLUSH):  Possible fix for the problem of Windows
	utilities not properly displaying files created using enhaced text mode.
	Bug #2744404

2009-09-13  Ethan A Merritt  <merritt@u.washington.edu>

	* src/term_api.h src/set.c (set_termoptions): Clean up the code for
	'set termoption <foo>', using terminal flags to ensure that a command
	is only sent to terminal types that can handle it.

	* docs/gnuplot.doc term/cairo.trm term/canvas.trm term/cgm.trm
	term/emf.trm term/gd.trm term/pdf.trm term/post.trm term/svg.trm
	term/tgif.trm term/x11.trm docs/gnuplot.doc:
	Add flag to allow "set termopt linewidth <lw>"

2009-09-06  Ethan A Merritt  <merritt@u.washington.edu>

	* src/win/wgraph.c (drawgraph): Make sure to update current position
	after drawing a polyline.
	Bug #2213362

	* src/graphics.c (boundary): If there is no colorbox, don't try to 
	assign tick positions for it.
	Bug #2822482

	* term/gd.trm: Re-order initialization of background color, correct
	compilation warnings if using libgd 2.0.36

2009-09-03  Alexander Täschner  <taschna@users.sourceforge.net>

	* src/datafile.c (df_generate_pseudodata):  Fix off-by-one error in
	generating the number of points corresponding to samples.

2009-09-02  Benjamin Lindner  <lindnerb@users.sourceforge.net> 

	* docs/gnuplot.doc docs/plotstyles.gnu demo/histerror.dat:
	Add a figure to the pdf documentation showing histogram with errorbars.
